// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .cache-11aaxx7-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-11aaxx7-StyledContainer-base"
  >
    <span
      aria-disabled="false"
      class="cache-1vwmh8m-StyledText e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly bordered 1`] = `
<DocumentFragment>
  .cache-1j04psv-StyledContainer-bordered {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-1j04psv-StyledContainer-bordered"
  >
    <span
      aria-disabled="false"
      class="cache-1vwmh8m-StyledText e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-b7qcxz-StyledContainer-disabledStyles-base {
  opacity: 0.5;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-rqod6w-StyledText-disabledStyles {
  opacity: 0.5;
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-b7qcxz-StyledContainer-disabledStyles-base"
  >
    <span
      aria-disabled="true"
      class="cache-rqod6w-StyledText-disabledStyles e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;
